# kalshi-trades

./: .env.demo  .env.prod  .gitignore  ARCHITECTURE.md  Makefile  README.md  USAGE-gfm.md  USAGE.md  USAGE.qmd  _quarto.yml  auth.py  order_book.py  pyproject.toml  watcher.py
.github/workflows/: render-usage.yml
examples/: demo.ipynb
kalshi_trades/: __init__.py  __main__.py  auth.py  client.py  config.py  dashboard.py  models.py  orderbook.py  strategy.py  websocket.py
notebooks/: ACCOUNT.qmd  browse-markets.ipynb
